	REM: Removed unused maps.
	REM: Removed the map from the inventory menu (#202).
	REM: Removed unused sprite files.
	REM: Removed the dungeon exploring room variable changing based on the hero position (need to activate sensor instead).
	REM: Removed the fog manager script (#212).
	REM: Removed pre-alpha screenshots from the sprites folder (#195).
	REM: Removed support for MacOS Ventura.
	TDO: Setup the quest files for the Solarus launcher.
	TDO: Overhaul the bow & arrow system such as in OOT (#145).
	TDO: Redraw hero animations from ALTTD (happy, sad, collapse, ...) (#146).
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix low memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Map the missing caves (#151).
	TDO: Finish realigning trees in the Hyrule Field (#96).
	TDO: Rename some soldier enemies in order to make them appear during the game and not at the beginning (#97).
	TDO: Add a quick swap feature (#196).
	TDO: Remove the tofu character at the end of lines in the enter_command_mono font (#184).
	TDO: Fix Stalfos jumping over barrier onto lower layers (#214).
	TDO: Fix Ballchain Knights being incompatible with the separator manager (#223).

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Remove *.xcf and *.psd work files from the data files (#169).
	TDO: Add night entities to maps (#67).
	TDO: Add hook entities to trees (#103). 
	TDO: Finish the remaining houses (#104).
	TDO: Add remaining inside maps coordinates (#105).
	TDO: Clean up unused files (#98).
	TDO: Update the title screen (#50).
	TDO: Change the Master Sword sprite on the title screen (#50).
	TDO: Change all the enemies in the Hyrule Field (#81).
	TDO: Add a falling animation for enemies (#84).