@@ -2,7 +2,7 @@ text{ key = "copyright_notice.made_by_fans.line_1", value = "Ce jeu non commerci
 text{ key = "copyright_notice.made_by_fans.line_2", value = "et n'a aucun lien avec Nintendo." }
 text{ key = "copyright_notice.proprietary.line_1", value = "The Legend of Zelda est" }
 text{ key = "copyright_notice.proprietary.line_2", value = "une marque déposée par Nintendo." }
-text{ key = "copyright_notice.proprietary.line_3", value = "© Team ZeldaHSA 2017-2024, © Nintendo 1985-2024" }
+text{ key = "copyright_notice.proprietary.line_3", value = "© Team ZeldaHSA 2017-2025, © Nintendo 1985-2025" }
 text{ key = "copyright_notice.solarus.line_1", value = "Solarus est un logiciel libre sous licence GPL v3." }
 text{ key = "copyright_notice.solarus.line_2", value = "Le code source est sous licence GPL v3." }
 text{ key = "copyright_notice.website", value = "www.teamzhsa.wixsite.com/zeldahsa" }
