@@ -2029,9 +2029,8 @@ font{ id = "ega", description = "Px437_IBM_EGA_8x14" }
 font{ id = "ega_png", description = "ega_png" }
 font{ id = "enter_command_mono", description = "Enter Command Mono" }
 font{ id = "green_digits", description = "Green digits" }
+font{ id = "kubasta", description = "Kubasta" }
 font{ id = "map_name", description = "map_name" }
-font{ id = "minecraftia", description = "Minecraftia" }
-font{ id = "minecraftia_mono", description = "Minecraftia Mono" }
 font{ id = "small_green_digits", description = "Small green digits" }
 font{ id = "small_white_digits", description = "Small white digits" }
 font{ id = "white_digits", description = "White digits" }
