@@ -10,7 +10,7 @@ Dans un pays d'Hyrule ravagé par les forces du Mal, les peuples hyliens ont ré
   release_date = "",
   website = "",
   normal_quest_size = "300x240",
-  min_quest_size = "300x240",
+  min_quest_size = "300x180",
   max_quest_size = "320x320",
 }
 
