@@ -525,6 +525,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	REM: Removed the fog manager script (#212).
 	REM: Removed pre-alpha screenshots from the sprites folder (#195).
 	REM: Removed support for MacOS Ventura.
+	REM: Removed Minecraftia font.
 	TDO: Setup the quest files for the Solarus launcher.
 	TDO: Overhaul the bow & arrow system such as in OOT (#145).
 	TDO: Redraw hero animations from ALTTD (happy, sad, collapse, ...) (#146).
